--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <meta
+      name="description"
+      content="VoffieDev's portfolio page"
+    />
     <title>VoffieOS</title>
   </head>
   <body>
